--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>My First Github Repo</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, maxime eos autem a ipsam reprehenderit ut numquam at voluptas! Facere molestias maiores consectetur perspiciatis, deleniti consequuntur quasi. Consequuntur, deleniti porro.</p>
 </body>
 </html>
